# Ai-Travel-App-API

./: .gitignore  activities.json  flight.json  pyproject.toml  restaurants.json
final_test_ai_travel_app/: activities_crew.py  agents.py  asyncio_test.py  flights_crew.py  restaurants_crew.py  tasks.py  test_json.py
final_test_ai_travel_app/modules/: access_token.py  activities.py  flights.py  hotels.py  iata_code.py  restaurants.py
